Source/WebKit2/Shared/mac/RemoteLayerTreeTransaction.h
@@ -108,6 +108,11 @@ public:
             everChangedProperties |= changeFlags;
         }
 
+        void resetChangedProperties()
+        {
+            changedProperties = RemoteLayerTreeTransaction::NoChange;
+        }
+
         LayerChange changedProperties;
         LayerChange everChangedProperties;
 
@@ -163,11 +168,14 @@ public:
 #endif
 
     typedef HashMap<WebCore::GraphicsLayer::PlatformLayerID, std::unique_ptr<LayerProperties>> LayerPropertiesMap;
-    
+
     Vector<LayerCreationProperties> createdLayers() const { return m_createdLayers; }
-    const LayerPropertiesMap& changedLayers() const { return m_changedLayerProperties; }
-    LayerPropertiesMap& changedLayers() { return m_changedLayerProperties; }
     Vector<WebCore::GraphicsLayer::PlatformLayerID> destroyedLayers() const { return m_destroyedLayerIDs; }
+
+    Vector<RefPtr<PlatformCALayerRemote>>& changedLayers() { return m_changedLayers; }
+
+    const LayerPropertiesMap& changedLayerProperties() const { return m_changedLayerProperties; }
+    LayerPropertiesMap& changedLayerProperties() { return m_changedLayerProperties; }
 
     WebCore::IntSize contentsSize() const { return m_contentsSize; }
     void setContentsSize(const WebCore::IntSize& size) { m_contentsSize = size; };
@@ -198,7 +206,9 @@ public:
     
 private:
     WebCore::GraphicsLayer::PlatformLayerID m_rootLayerID;
-    LayerPropertiesMap m_changedLayerProperties;
+    Vector<RefPtr<PlatformCALayerRemote>> m_changedLayers; // Only used in the Web process.
+    LayerPropertiesMap m_changedLayerProperties; // Only used in the UI process.
+
     Vector<LayerCreationProperties> m_createdLayers;
     Vector<WebCore::GraphicsLayer::PlatformLayerID> m_destroyedLayerIDs;
     Vector<WebCore::GraphicsLayer::PlatformLayerID> m_videoLayerIDsPendingFullscreen;
