Source/WebKit2/UIProcess/mac/RemoteLayerTreeHost.mm
@@ -56,7 +56,7 @@ RemoteLayerTreeHost::~RemoteLayerTreeHost()
 bool RemoteLayerTreeHost::updateLayerTree(const RemoteLayerTreeTransaction& transaction, float indicatorScaleFactor)
 {
     for (const auto& createdLayer : transaction.createdLayers()) {
-        const RemoteLayerTreeTransaction::LayerProperties* properties = transaction.changedLayers().get(createdLayer.layerID);
+        const RemoteLayerTreeTransaction::LayerProperties* properties = transaction.changedLayerProperties().get(createdLayer.layerID);
         createLayer(createdLayer, properties);
     }
 
@@ -67,7 +67,7 @@ bool RemoteLayerTreeHost::updateLayerTree(const RemoteLayerTreeTransaction& tran
         rootLayerChanged = true;
     }
 
-    for (auto& changedLayer : transaction.changedLayers()) {
+    for (auto& changedLayer : transaction.changedLayerProperties()) {
         auto layerID = changedLayer.key;
         const RemoteLayerTreeTransaction::LayerProperties& properties = *changedLayer.value;
 
@@ -84,13 +84,13 @@ bool RemoteLayerTreeHost::updateLayerTree(const RemoteLayerTreeTransaction& tran
             relatedLayers.set(properties.maskLayerID, getLayer(properties.maskLayerID));
 
         if (m_isDebugLayerTreeHost) {
-            RemoteLayerTreeTransaction::LayerProperties propertiesCopy(properties);
-            propertiesCopy.masksToBounds = false;
-            if (propertiesCopy.changedProperties & RemoteLayerTreeTransaction::BorderWidthChanged)
-                propertiesCopy.borderWidth *= 1 / indicatorScaleFactor;
-            
-            RemoteLayerTreePropertyApplier::applyProperties(layer, this, propertiesCopy, relatedLayers);
-        } else
+            RemoteLayerTreePropertyApplier::applyProperties(layer, properties, relatedLayers);
+
+            if (properties.changedProperties & RemoteLayerTreeTransaction::BorderWidthChanged)
+                asLayer(layer).borderWidth = properties.borderWidth / indicatorScaleFactor;
+            asLayer(layer).masksToBounds = false;
+          } else
+        else
             RemoteLayerTreePropertyApplier::applyProperties(layer, this, properties, relatedLayers);
     }
 
